--- a/app/server/endpoint/pom.xml
+++ b/app/server/endpoint/pom.xml
@@ -308,6 +308,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <!-- ===================================================================================== -->
