--- a/app/pom.xml
+++ b/app/pom.xml
@@ -91,7 +91,7 @@
     <opentracing.spring.web.starter.version>3.0.0</opentracing.spring.web.starter.version>
 
     <!-- Global camel version used everywhere -->
-    <camel.version>3.0.0</camel.version>
+    <camel.version>3.1.0-SNAPSHOT</camel.version>
     <camel-k-runtime.version>1.0.7</camel-k-runtime.version>
 
     <!-- Don't fork based on cores, doesn't work nicely in the cloud -->
@@ -129,7 +129,6 @@
     <assertj-core.version>3.14.0</assertj-core.version>
     <shrinkwrap.version>2.2.6</shrinkwrap.version>
 
-    <mailapi.version>1.6.4</mailapi.version>
     <jakarta-mail.version>1.6.4</jakarta-mail.version>
     <json-schema-core.version>1.2.8</json-schema-core.version>
     <json-schema-validator.version>2.2.10</json-schema-validator.version>
@@ -1894,12 +1893,6 @@
         </exclusions>
       </dependency>
 
-      <dependency>
-        <groupId>jakarta.xml.bind</groupId>
-        <artifactId>jakarta.xml.bind-api</artifactId>
-        <version>2.3.2</version>
-      </dependency>
-
       <!-- TODO: Maybe import BOM ? -->
       <dependency>
         <groupId>org.apache.camel</groupId>
@@ -1913,17 +1906,17 @@
         <version>${camel.version}</version>
       </dependency>
 
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-base</artifactId>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-base</artifactId>
         <version>${camel.version}</version>
-    </dependency>
+      </dependency>
 
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-http</artifactId>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-http</artifactId>
         <version>${camel.version}</version>
-    </dependency>
+      </dependency>
 
       <dependency>
         <groupId>org.apache.camel</groupId>
@@ -2395,13 +2388,7 @@
       <dependency>
         <groupId>jakarta.mail</groupId>
         <artifactId>jakarta.mail-api</artifactId>
-        <version>${mailapi.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.sun.mail</groupId>
-        <artifactId>jakarta.mail</artifactId>
-        <version>${mailapi.version}</version>
+        <version>${jakarta-mail.version}</version>
       </dependency>
 
       <dependency>
